--- a/main.css
+++ b/main.css
@@ -2,9 +2,27 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 p, .btn, div{
-    font-size: 10px !important;
+    font-size: 11px !important;
     text-align: justify;
     line-height: 20px;
+}
+.tra .nav-link{
+  position: fixed;
+  top: 80px;
+  right: 0;
+  width: 40px;
+  height: 35px;
+  background: linear-gradient(to bottom, rgba(0, 14, 14, 0.719), rgb(1, 43, 43)) ;
+  clip-path: polygon(0% 50%, 30% 0%, 100% 0%, 100% 100%, 30% 100%, 0% 50%);
+
+}
+.fab{
+    font-size: 15px !important;
+    margin: 0 5px;
+}
+.fa-moon, .fa-sun{
+    font-size: 15px !important;
+    margin: 0 5px;
 }
 h1{
     font-size: 50px !important;
@@ -60,6 +78,16 @@ a{
     -webkit-background-clip: text;
     font-weight: 700;
 }
+
+.navbar-toggler {
+  border-color: teal;
+  color: transparent;
+}
+
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%280, 128, 128, 1%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
 
 @media screen and (max-width: 770px) {
     #home, #about, #contact, #project{
@@ -369,7 +397,7 @@ a{
 .about .card {
     transition: 0.7s;
     cursor: pointer;
-    background: linear-gradient(to bottom, rgba(0, 128, 128, 0.349), rgba(0, 128, 128, 0.144));    
+    background: linear-gradient(to bottom, rgba(0, 128, 128, 0.349), rgba(0, 128, 128, 0.144));  
   }
 .bg-dark .about .card {
     color: #dcdcdc;
